--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
-body {
-  margin: 0;
-  padding: 0;
+html body {
+  margin: 0px 0px;
+  padding: 0px 0px;
+  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+ 
 }
 
 code {
